# Aurea

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
doc/: AUREA_Encoding_Pipeline.md
docs/: index.html
docs/images/: images_config.json
samples/: alchemist_AUREA-q20.aur  alchemist_AUREA-q85.aur  kodim01.aur
scripts/: diffview.pyw  install.ps1  uninstall.ps1
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/core/: Cargo.toml
src/core/src/: aurea.rs  aurea_encoder.rs  bitstream.rs  calibration.rs  capillary.rs  cfl.rs  codec_params.rs  color.rs  dsp.rs  encoder.rs  error.rs  fibonacci.rs  geometric.rs  golden.rs  hex.rs  hex_decoder.rs  hex_edge.rs  hex_encoder.rs  hierarchy.rs  lib.rs  lot.rs  paeth.rs  photon.rs  polymerase.rs  postprocess.rs  rans.rs  scan.rs  scene_analysis.rs  spin.rs  trellis.rs  turing.rs  vq.rs  wavelet.rs  zeckendorf.rs
src/shell/: Cargo.toml
src/shell/src/: lib.rs
src/trashland/: Cargo.toml
src/trashland/src/: corrupt.rs  main.rs  pipeline.rs
src/viewer/: Cargo.toml
src/viewer/src/: main.rs
