[package]
name = "aurea-shell"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Aurea Windows shell extension (thumbnails, WIC codec)"

[lib]
crate-type = ["cdylib"]

[dependencies]
aurea-core = { path = "../core" }
image = { version = "0.25", default-features = false }
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
]
